# ghostdagsim

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  Dockerfile  Dockerfile.test  README.md  dag.cc  dag.h  discovery_test.cc  entrypoint.sh  graphene.cc  graphene.h  ipv4-address-helper-custom.cc  ipv4-address-helper-custom.h  main.cc  mempool.cc  mempool.h  metrics.cc  metrics.h  miner.cc  miner.h  node-helper.cc  node-helper.h  node-topology-helper.cc  node-topology-helper.h  node.c  node.cc  node.h
.github/: FUNDING.yml
.github/workflows/: build.yml  publish.tml  publish.yml  test.yml
docker/: README.md  docker-compose.yml
docker/grafana/provisioning/dashboards/: dashboard.yml  ghostdag-dashboard.json
docker/prometheus/: prometheus.yml
helpers/: ipv4-address-helper-custom.cc  ipv4-address-helper-custom.h  node-helper.cc  node-helper.h  node-topology-helper.cc  node-topology-helper.h
tests/: ghostdagtest.cc  mempooltest.cc
